<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chuyendoi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <TextView-->

    <Button
        android:id="@+id/button"
        android:layout_width="375dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/gross_income_edit_text"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:inputType="numberDecimal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/what_is_your_income_tax_bracket"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gross_income_edit_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="259dp"
        android:layout_height="145dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_25"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_20"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_15"
            android:textSize="20sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/round_net_income"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/net_income_00_00"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>